# qq-quote-generator-rev

./: .dockerignore  .gitignore  Dockerfile  README.md  anim.py  composer.py  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  main.py  renderer.py  requirements.txt  screenshot.py  setup_playwright.py  utils.py
native/: CMakeLists.txt  container_pango_cairo.cpp  container_pango_cairo.h  main.cpp
renderer/: Cargo.toml
renderer/src/: main.rs
templates/: main-template.html
