[package]
name = "litehtml_renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
# --- CORRECTED AND PINNED BLITZ DEPENDENCIES ---
# We must pin all related blitz crates to the exact same pre-release version
# to prevent Cargo from pulling in newer, incompatible transitive dependencies.
# The "=" is critical for exact version matching.
blitz-html = "=0.1.0-alpha.1"
blitz-dom = "=0.1.0-alpha.1"
blitz-traits = "=0.1.0-alpha.1"
blitz-renderer-vello = "=0.1.0-alpha.1"

# CLI & 基础
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 同步阻塞异步函数（避免引入完整 async runtime）
pollster = "0.4"

# 写文件时确保目录存在
fs-err = "2.11"